episodes style added

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
         </header>
         <main>
+            <section class="home"></section>
             <section class="episodes">
                 <div class="episodes__header">
                     <h2 class="episodes__header-title">Latest episodes</h2>
@@ -28,7 +29,7 @@
                             Gear
                         </button>
                         <div class="episodes__top-2-number">Episode 3</div>
-                        <h3 class="episodes__top-2-title">Should you get outboard audio gear?</h3>
+                        <h3 class="episodes__top-2-title">Should you get <br>outboard audio gear?</h3>
                         <p class="episodes__top-2-text">Is hardware really worth it when it comes to podcasting? The answer is...it depends. Here’s our reasons on why you might want to consider picking something up.</p>
                         <button class="episodes__top-2-btn episodes__btn">
                             View Episode Details
